--- a/ToDoApp/ToDoApp/Views/ToDoItems/Index.cshtml
+++ b/ToDoApp/ToDoApp/Views/ToDoItems/Index.cshtml
@@ -38,7 +38,7 @@
                 <td>
                     <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.Id"><i class="fa fa-pencil" aria-hidden="true"></i></a>
                     <a asp-action="Details" class="btn btn-warning" asp-route-id="@item.Id"><i class="fa fa-info-circle" aria-hidden="true"></i></a>
-                    <a asp-action="Delete" class="btn btn-warning" asp-route-id="@item.Id"><i class="fa fa-info-circle" aria-hidden="true"></i></a>
+                    <a asp-action="Delete" class="btn btn-warning" asp-route-id="@item.Id"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
                 </td>
             </tr>
         }
